--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "amazon-cognito-auth-js-promises",
+  "name": "aws-cognito-auth-js-promises",
   "description": "Promise wrappers for Amazon Cognito Auth JavaScript SDK",
   "version": "1.1.3",
   "author": {
-    "name": "Chamath Silva",
-    "email": "mbckchamathsilva@gmail.com"
+    "name": "Deepak Khedkar",
+    "email": "deepakkhedkar1994@gmail.com"
   },
   "homepage": "http://aws.amazon.com/cognito",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chamathsilva/amazon-cognito-auth-js.git "
+    "url": "https://github.com/deepakkhedkar1994/aws-cognito-auth-js-promises.git"
   },
   "license": "Apache-2.0",
   "licenses": [
